--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
 DB_CONNECTION=mongodb+srv://mean_user:rxHNjrrnCv0OlZm4@cluster0.0sucg.mongodb.net/hospitalDB
+JWT_SECRET=HOLsddfdfdf4578455
